<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/thumbnailheadshot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/region_select_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/headshot" />

    <RelativeLayout
        android:id="@+id/region_select_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/define_self"
        android:layout_marginLeft="@dimen/login_button_padding"
        android:layout_marginRight="@dimen/login_button_padding"
        android:background="@drawable/rect_gray"
        android:clickable="true" >

        <Spinner
            android:id="@+id/myRegionSpinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_alignParentLeft="true"
            android:background="@drawable/rect_gray"
            android:entries="@array/region"
            android:gravity="center"
            android:padding="10dp"
            android:prompt="@string/select_region"
            android:singleLine="true"
            android:textSize="@dimen/login_font_size" />

        <ImageButton
            android:id="@+id/select_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/select_regon_icon_bg"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <com.comtop.app.view.TextURLView
        android:id="@+id/define_self"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_above="@+id/userid"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/login_button_padding"
        android:layout_marginTop="5dp"
        android:textColor="#499BF7"
        android:textSize="@dimen/login_font_size" />

    <com.comtop.app.view.ClearEditText
        android:id="@+id/userid"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/login_button_padding"
        android:layout_marginRight="@dimen/login_button_padding"
        android:background="@drawable/edittext_bg2"
        android:hint="@string/login_user_id_hint"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="@dimen/login_font_size" />

    <com.comtop.app.view.ClearEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_below="@+id/userid"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="@dimen/login_button_padding"
        android:layout_marginRight="@dimen/login_button_padding"
        android:background="@drawable/edittext_bg2"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="@dimen/login_font_size" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/login_button_padding"
        android:layout_marginRight="@dimen/login_button_padding"
        android:background="@drawable/login_button_bg"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/login_font_size" />

    <Button
        android:id="@+id/setting"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/setting_bg_btn"
        android:text="@string/button_setting"
        android:textColor="@color/blue"
        android:textSize="@dimen/login_font_size" />

</RelativeLayout>
