<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapthumbnail="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F5F6F5" >

    <ScrollView
        android:id="@+id/myScrollView"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:paddingBottom="10dp"
        android:background="#FFFFFF" >

  
        <RelativeLayout
            android:id="@+id/personInfLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/isBlackFlag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp"
                android:background="#1C1C1C"
                android:textColor="@color/white"
                android:textSize="15dp" 
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="5dp"
                android:visibility="gone"
                android:text="@string/is_black_flag"/>

            <TextView
                android:id="@+id/personName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/isBlackFlag"
                android:layout_margin="5dp"
                android:textColor="@color/detailPersonName"
                android:textSize="20dp" />
            
            <TextView
                android:id="@+id/personID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/personName"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/personName"
                android:textColor="@color/list_font_color"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/contractorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/personName"
                android:layout_toRightOf="@+id/isBlackFlag"
                android:layout_margin="5dp"
                android:textColor="@color/list_font_color"
                android:textSize="@dimen/content_font_size"/>
            
            
           <TextView
                android:id="@+id/blackReasonTip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contractorName"
                android:layout_margin="5dp"
                 android:paddingLeft="15dp"
                android:textColor="@color/list_font_color"
                android:textSize="@dimen/content_font_size"
                android:gravity="right"
                android:visibility="gone"
                android:text="@string/black_reason_tip"/>

            <TextView
                android:id="@+id/blackReason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contractorName"
                android:layout_toRightOf="@id/blackReasonTip"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:textSize="@dimen/content_font_size"
                android:gravity="right"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/relieveDateTip"
                 android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/blackReason"
                android:layout_margin="5dp"
                android:paddingLeft="15dp"
                android:textColor="@color/list_font_color"
                android:textSize="@dimen/content_font_size"
                android:gravity="right"
                android:visibility="gone"
                android:text="@string/relieve_date_tip"/>
            
           <TextView
                android:id="@+id/relieveDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/blackReason"
                android:layout_toRightOf="@id/relieveDateTip"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:textSize="@dimen/content_font_size"
                android:gravity="right"
                android:visibility="gone"/>
            
    	
	    <View
	        android:id="@+id/mylineView"
	        android:layout_width="fill_parent" 
	        android:layout_height="2dp"
	        android:layout_below="@id/relieveDateTip"
	        android:background="#6E6E6E" />
	
	    <ListView 
	        android:id="@+id/certificateListView"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_below="@+id/mylineView"
	        android:layout_gravity="bottom"
	        android:layout_marginLeft="10dp" 
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="10dp"
	        android:scrollbars="none"
	        android:divider="@null" 
	        android:dividerHeight="10dp"
	        android:padding="3dp" />

	   
       <com.comtop.app.view.PersonListView
        android:id="@+id/projectListView"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"  
	        android:layout_below="@id/certificateListView" 
	        android:layout_gravity="bottom"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:divider="@null"
	        android:dividerHeight="10dp"
	        android:padding="3dp" />
       
     </RelativeLayout> 
 </ScrollView>
    
    <LinearLayout
        android:id="@+id/buttom_bar_group"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RelativeLayout style="@style/ButtomBar" >
            <ImageButton
                android:id="@+id/button_shot"
                style="@style/ButtomBarImgBtn"
                android:background="@drawable/bar_news"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/makeCertificate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_shot"
                android:layout_centerHorizontal="true"
                android:text="制证"
                android:textSize="17sp" />
        </RelativeLayout>
    </LinearLayout>
  

</RelativeLayout>
